--- a/src/main/resources/templates/fragments/home-page/hobbies.html
+++ b/src/main/resources/templates/fragments/home-page/hobbies.html
@@ -16,52 +16,40 @@
 
     <div class="hobbies-layout">
         <div class="hobbies-photos"
-             x-data="{ 
-                 active: 0, 
-                 photos: [
-                     { src: '/images/self_chess.png', alt: 'Playing chess' },
-                     { src: '/images/self_cat.png', alt: 'With my cat' },
-                     { src: '/images/self_pieter.png', alt: 'With colleague Pieter' },
-                     { src: '/images/self_beach.png', alt: 'At the beach' }
-                 ],
-                 next() { this.active = (this.active + 1) % this.photos.length },
-                 prev() { this.active = (this.active - 1 + this.photos.length) % this.photos.length }
-             }"
-             x-init="setInterval(() => next(), 5000)">
+             x-data="{ active: 0 }"
+             x-init="setInterval(() => { active = (active + 1) % 4 }, 5000)">
             
             <div class="photos-wrapper">
-                <template x-for="(photo, index) in photos" :key="index">
-                    <img :src="photo.src" 
-                         :alt="photo.alt"
-                         loading="lazy"
-                         class="photo-slide"
-                         x-show="active === index"
-                         x-transition:enter="transition ease-out duration-500"
-                         x-transition:enter-start="opacity-0 scale-95"
-                         x-transition:enter-end="opacity-100 scale-100"
-                         x-transition:leave="transition ease-in duration-300"
-                         x-transition:leave-start="opacity-100 scale-100"
-                         x-transition:leave-end="opacity-0 scale-95">
-                </template>
+                <img th:src="@{/images/self_chess.png}" 
+                     alt="Playing chess"
+                     class="photo-slide"
+                     :class="active === 0 ? 'photo-active' : 'photo-hidden'">
+                <img th:src="@{/images/self_cat.png}" 
+                     alt="With my cat"
+                     class="photo-slide"
+                     :class="active === 1 ? 'photo-active' : 'photo-hidden'">
+                <img th:src="@{/images/self_pieter.png}" 
+                     alt="With colleague Pieter"
+                     class="photo-slide"
+                     :class="active === 2 ? 'photo-active' : 'photo-hidden'">
+                <img th:src="@{/images/self_beach.png}" 
+                     alt="At the beach"
+                     class="photo-slide"
+                     :class="active === 3 ? 'photo-active' : 'photo-hidden'">
             </div>
             
             <div class="photos-nav">
-                <template x-for="(photo, index) in photos" :key="index">
-                    <button class="photo-dot" 
-                            :class="active === index ? 'active' : ''"
-                            @click="active = index"
-                            :aria-label="'View photo ' + (index + 1)"></button>
-                </template>
+                <button class="photo-dot" :class="active === 0 ? 'active' : ''" @click="active = 0" aria-label="View photo 1"></button>
+                <button class="photo-dot" :class="active === 1 ? 'active' : ''" @click="active = 1" aria-label="View photo 2"></button>
+                <button class="photo-dot" :class="active === 2 ? 'active' : ''" @click="active = 2" aria-label="View photo 3"></button>
+                <button class="photo-dot" :class="active === 3 ? 'active' : ''" @click="active = 3" aria-label="View photo 4"></button>
             </div>
         </div>
 
         <div class="hobbies-content">
             <div class="hobbies-grid">
                 <div th:each="hobby, iterStat : ${details.hobbies}" 
-                     class="hobby-card"
-                     x-data="{ show: false }"
-                     x-init="setTimeout(() => show = true, iterStat.index * 100)"
-                     x-bind:class="show ? 'opacity-100 translate-y-0' : 'opacity-0 translate-y-4'">
+                     class="hobby-card">
                     <div class="hobby-icon">
                         <i th:classappend="${hobby.icon.classes}" th:style="${hobby.icon.style}" aria-hidden="true"></i>
                     </div>
@@ -94,10 +82,10 @@
                     <div class="language-item">
                         <div class="language-header">
                             <span class="language-name">English</span>
-                            <span class="language-level">Fluent (C2)</span>
+                            <span class="language-level">Native</span>
                         </div>
                         <div class="language-bar">
-                            <div class="language-fill" style="width: 95%"></div>
+                            <div class="language-fill" style="width: 100%"></div>
                         </div>
                     </div>
                     <div class="language-item">
