--- a/src/main/resources/templates/fragments/home-page/skills.html
+++ b/src/main/resources/templates/fragments/home-page/skills.html
@@ -22,7 +22,10 @@
              x-init="setTimeout(() => show = true, iterStat.index * 50)"
              x-bind:class="show ? 'opacity-100 translate-y-0' : 'opacity-0 translate-y-4'">
             <div class="skill-card-header">
-                <span class="skill-name" th:text="${skill.name}"></span>
+                <div class="flex items-center gap-2">
+                    <i th:classappend="${skill.icon.classes}" th:style="${skill.icon.style}" class="text-lg" aria-hidden="true"></i>
+                    <span class="skill-name" th:text="${skill.name}"></span>
+                </div>
                 <span class="skill-level" th:text="${skill.proficiency} + '/10'"></span>
             </div>
             <div class="skill-bar-track">
