--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Phi Tiet - Senior Software Engineer</title>
+    <title>Phi Tiet</title>
 </head>
 
 <body>
@@ -53,18 +53,6 @@
                     </p>
                     
                     <div class="contact-links">
-                        <a href="mailto:pttiet@outlook.com" class="contact-link">
-                            <div class="contact-link-icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
-                                </svg>
-                            </div>
-                            <div>
-                                <p class="contact-link-label">Email</p>
-                                <p class="contact-link-value">pttiet@outlook.com</p>
-                            </div>
-                        </a>
-                        
                         <a href="https://www.linkedin.com/in/phi-tiet-804886220/" target="_blank" rel="noopener noreferrer" class="contact-link">
                             <div class="contact-link-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
